# S0006E

./: .gitignore  CMakeLists.txt  README.md
exts/: CMakeLists.txt
projects/assignment-1/: CMakeLists.txt
projects/assignment-1/Doxygen documentation/html/: _matrix4_8h_source.html  _vector4_d_8h_source.html  annotated.html  class_matrix4-members.html  class_matrix4.html  class_vector4_d-members.html  class_vector4_d.html  classes.html  dir_158daa3da2e38b8f1619a5e93e654b19.html  dir_35dcadace52d224e0c57e381800ad7ef.html  dir_3d209d3f892ab60186b0161fdd160a43.html  dir_595f77378a1a0b6d69bba91f48ea177a.html  dir_a5c8150ce2ca33337794c7bef7e586bd.html  dir_d522931ffa1371640980b621734a4381.html  files.html  functions.html  functions_func.html  index.html  pch_8h_source.html
projects/assignment-1/Doxygen documentation/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  searchdata.js
projects/assignment-1/Doxygen documentation/latex/: annotated.tex  class_matrix4.tex  class_vector4_d.tex  refman.tex
projects/assignment-1/code/: Matrix4.h  Vector4D.h
projects/assignment-2/: CMakeLists.txt
projects/assignment-2/code/: Matrix4.h  MeshResource.cc  MeshResource.h  Vector4D.h  exampleapp.cc  exampleapp.h
projects/assignment-3/: CMakeLists.txt
projects/assignment-3/code/: Matrix4.h  MeshResource.cc  MeshResource.cpp  MeshResource.h  TextureResource.cc  TextureResource.cpp  exampleapp.cc  exampleapp.h
projects/assignment-4/: CMakeLists.txt
projects/assignment-4/code/: GraphicsNode.cc  Matrix4.h  MeshResource.cc  MeshResource.h  Shader.cc  Shader.h  TextureResource.cc  Vector4D.h  exampleapp.cc  exampleapp.h
projects/assignment-4/code/res/: fragmentShader.txt  vertexShader.txt
projects/assignment-5/: CMakeLists.txt
projects/assignment-5/code/: GraphicsNode.cc  GraphicsNode.h  LightingNode.cc  LightingNode.h  Matrix4.h  MeshResource.cc  MeshResource.h  Shader.cc  Shader.h  TextureResource.cc  TextureResource.h  Vector4D.h  animation.cc  animation.h  exampleapp.cc  exampleapp.h  fragmentShader.frag  joint.cc  joint.h  skeleton.cc  skeleton.h  vertexShader.ver
projects/assignment-5/code/res/: customVertexShader.ver  fragmentShader.frag
projects/enviroment/: CMakeLists.txt
projects/enviroment/code/: GraphicsNode.cc  LightingNode.h  Matrix4.h  MeshResource.cc  MeshResource.h  Shader.cc  Shader.h  Vector4D.h  animation.cc  animation.h  debugCube.cc  debugCube.h  debugLine.cc  debugLine.h  debugQuad.cc  debugQuad.h  exampleapp.cc  exampleapp.h  main.cc  plane.cc  plane.h  ray.cc  ray.h  rigidBody.cc  rigidBody.h  skeleton.h
projects/enviroment/code/res/: customVertexShader.ver  fShader.frag  lineShader.frag  lineShader.ver  vertexShader.ver
projects/example/code/: main.cc
projects/projects/: CMakeLists.txt
projects/projects/code/: GraphicsNode.cc  GraphicsNode.h  LightingNode.cc  Matrix4.h  MeshResource.cc  MeshResource.cpp  MeshResource.h  Renderer.cc  Renderer.h  Shader.cc  Shader.cpp  Shader.h  TextureResource.cc  TextureResource.cpp  TextureResource.h  Vector4D.h  exampleapp.cc  exampleapp.h  fragmentShader.frag  vertexShader.ver
projects/projects/code/res/: fragmentShader.frag  vertexShader.ver
